# macro-data-forecasting

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
data/reference/: README.md  cpi_release_calendar_sample.csv
examples/: baseline_report.md
src/macro_data_forecasting/: __init__.py  cli.py  config.py  database.py  logging_config.py
src/macro_data_forecasting/evaluation/: __init__.py  metrics.py
src/macro_data_forecasting/features/: __init__.py  dataset_contract.py  diagnostics.py  feature_matrix.py  point_in_time.py  targets.py  transforms.py
src/macro_data_forecasting/models/: __init__.py  baselines.py  comparison.py  results.py  validation.py
src/macro_data_forecasting/reports/: generate_report.py  plots.py
src/macro_data_forecasting/sources/: __init__.py  base.py  bls.py  bls_release_calendar.py  catalog.py  fred.py  ingestion.py  market.py  treasury.py
tests/: test_baselines.py  test_bls.py  test_bls_release_calendar.py  test_catalog.py  test_cli.py  test_config.py  test_database.py  test_dataset_contract.py  test_feature_diagnostics.py  test_feature_matrix.py  test_fred.py  test_imports.py  test_ingestion.py  test_model_comparison.py  test_model_metrics.py  test_plots.py  test_reports.py  test_targets.py  test_transforms.py  test_walk_forward_validation.py
