[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-data-forecasting"
version = "0.1.0"
description = "Point-in-time macroeconomic forecasting and nowcasting framework."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Macro Data Forecasting Contributors" },
]
dependencies = [
    "lightgbm>=4.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "SQLAlchemy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
